--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -12,7 +12,7 @@ $blue: #005495;
 
 $bgcolor: #E5E3D5;
 $orange: #e64e1f;
-$yellow: #f7ba2e;
+$yellow: #cab837;
 $teal: #09a2b3;
 $green: #7cb342;
 $darkblue: #072076;
