--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -20,6 +20,7 @@ $darkblue: #072076;
 $superdarkblue: #060e2c;
 $gray: #EFF1F2;
 $light_teal: #d9eff2;
+$purple: #5D2B79;
 
 
 $font_primary: 'Fira Sans Condensed', sans-serif;
