--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -1575,6 +1575,10 @@ body.logged-in.admin-bar {
   background-color: $darkblue;
   position: relative;
   min-height: 25em;
+  margin-top: 85px;
+  @include flexgroup();
+  @include flexbox-justify(center);
+  @include flexbox-align-items(center);
   * {
     color: #FFF;
   }
@@ -1587,42 +1591,45 @@ body.logged-in.admin-bar {
     padding: 0 0;
     margin: 0 auto;
     text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
+    position: relative;
+    top: -2vw;
+    // position: absolute;
+    // top: 50%;
+    // left: 50%;
+    // transform: translateX(-50%) translateY(-50%);
     .wrap {
       max-width: 1000px;
       width: 100%;
       margin: 0 auto;
       padding:0 20px;
     }
-    a.view-all-btn {
-      display: inline-block;
-      position: absolute;
-      top: -40px;
-      left: -2px;
-      font-family: $font_secondary;
-      font-size: 20px;
-      font-weight: bold;
-      line-height: 1.2;
-      text-transform: uppercase;
-      background: $red;
-      border:1px solid $red;
-      padding: 10px 35px;
+  }
+
+  a.view-all-btn {
+    display: inline-block;
+    position: absolute;
+    top: 40px;
+    left: -2px;
+    font-family: $font_secondary;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 1.2;
+    text-transform: uppercase;
+    background: $red;
+    border:1px solid $red;
+    padding: 10px 35px;
+    color: $cream;
+    text-decoration: none;
+    &:hover {
+      background-color: transparent;
+      border-color: $cream!important;
       color: $cream;
-      text-decoration: none;
-      &:hover {
-        background-color: transparent;
-        border-color: $cream!important;
-        color: $cream;
-      }
     }
   }
 
   h1 {
     font-family: $font_secondary;
-    font-size: 10vw;
+    font-size: 7vw;
     font-weight: 500;
     line-height:1.1;
     margin: 0 0;
