--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -893,12 +893,37 @@ a {
   }
 }
 
-body.logged-in.admin-bar {
+body.post-type-archive-tribe_events {
+  .tribe-common {
+    margin-top: 85px;
+    header.page-header {
+      border-left: 20px solid $cream;
+      border-right: 20px solid $cream;
+      position: relative;
+      @include flexgroup();
+    }
+  }
+  .tribe-common .tribe-common-l-container {
+    max-width: 1290px;
+  }
+  // .tribe-events-pro-photo {
+  //   display: none;
+  // }
+}
+
+html body.logged-in.admin-bar {
   .site-header {
     top: 32px;
   }
   .video-spacer {
     height: calc(100vh - 32px);
+  }
+  @media screen and (max-width: 782px) {
+    .site-header {top: 46px;}
+    #tribe-events-pg-template {margin-top: 131px;}
+    #wpadminbar {
+      position:fixed!important;
+    }
   }
 }
 
@@ -1758,7 +1783,7 @@ body.logged-in.admin-bar {
 .default-template {
   .entry-content {
     font-size: 18px;
-    line-height: 1.5;
+    line-height: 1.6;
     padding: 80px 30px;
     position: relative;
     z-index: 10;
@@ -2093,8 +2118,32 @@ body.single-tribe_events {
     max-width: 100%;
     width: 100%;
     padding: 0 0;
+    margin-top: 85px;
   }
-  .gallery-slider-content,
+  .gallery-slider-content {
+    background-color: $cream;
+    a.view-all-btn {
+      display: inline-block;
+      position: absolute;
+      top: 40px;
+      left: -2px;
+      font-family: $font_secondary;
+      font-size: 20px;
+      font-weight: bold;
+      line-height: 1.2;
+      text-transform: uppercase;
+      background: $red;
+      // border: 1px solid $red;
+      border:none;
+      padding: 10px 35px;
+      color: $cream;
+      text-decoration: none;
+      z-index: 20;
+      &:hover {
+        background: tint($red,15%);
+      }
+    }
+  }
   .tribe-events-single-event-description-wrap {
     background-color: $yellow;
   }
@@ -2110,15 +2159,38 @@ body.single-tribe_events {
   .tribe-events-content,
   .gallery-slide-wrap,
   .tribe-meta-inner {
-    max-width: 960px;
+    max-width: 100%;
     width: 100%;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 0 20px 20px;
   }
 
   .tribe-events-single-event-description.tribe-events-content {
-    padding-top: 25px;
+    padding-top: 40px;
     padding-bottom: 40px;
+    font-size: 18px;
+    line-height: 1.5;
+    h1.page-title {
+      font-family: $font_secondary;
+      font-size: 3rem;
+      font-weight: 600;
+      line-height: 1.2;
+      color: $cream;
+      margin:0 0 35px;
+      padding-bottom: 30px;
+      border-bottom: 2px solid $red;
+    }
+    h2 {
+      font-family: $font_secondary;
+      font-size: 25px;
+      line-height: 1.2;
+      margin: 0 0 15px;
+      color: $color_text_main;
+    }
+    p {
+      font-size: 18px;
+      line-height: 1.5;
+    }
   }
   .no-gallery .tribe-events-single-event-description.tribe-events-content {
     padding-top: 50px;
@@ -2140,7 +2212,6 @@ body.single-tribe_events {
     position: relative;
     #gallery-slider {
       position: relative;
-      top: -70px;
       overflow: hidden;
       .swiper-wrapper, .swiper-slide, .slide-image {
         width: 100%;
@@ -2159,9 +2230,8 @@ body.single-tribe_events {
     }
     .swiper-button-prev,
     .swiper-button-next {
-      margin-top: -70px;
       &:after {
-        color: #000;
+        color: #FFF;
         font-size: 30px;
       }
       &:hover {
@@ -2173,19 +2243,30 @@ body.single-tribe_events {
       display: none;
     }
     .swiper-button-prev {
-      left: -5vw;
+      left: 2.5vw;
     }
     .swiper-button-next {
-      right: -5vw;
+      right: 2.5vw;
     }
   }
   .hentry {
+    width: 100%;
+    margin: 0 auto;
     position: relative;
-    top: -35px;
     z-index: 20;
     .tribe-events-content {
       font-family: $font_primary;
-      color: #000;
+      color: $color_text_main;
+      max-width: 960px;
+      width: 100%;
+      margin: 0 auto;
+    }
+    .tribe-meta-wrapper {
+      .tribe-meta-inner {
+        max-width: 960px;
+        width: 100%;
+        margin: 0 auto;
+      }
     }
   }
   .tribe-events-related-events-title {
@@ -2200,15 +2281,17 @@ body.single-tribe_events {
     &:before {
       content:"";
       display: block;
-      width: 100%;
-      height: 5px;
       position: absolute;
-      top: 0;
+      top: 15px;
       left: 0;
-      background-image: url('assets/images/divider-long-teal.svg');
-      background-position: left center;
-      background-repeat: no-repeat;
-      background-size: 100%;
+      width: 100%;
+      // height: 5px;
+      // background-image: url('assets/images/divider-long-teal.svg');
+      // background-position: left center;
+      // background-repeat: no-repeat;
+      // background-size: 100%;
+      height: 2px;
+      background-color: $red;
     }
   }
 
@@ -2361,7 +2444,7 @@ body.single-tribe_events {
         font-size: 16px;
         font-weight: 500;
         line-height: 1.2;
-        color: $darkblue;
+        color: $color_text_main;;
         text-decoration: none;
       }
       .tribe-event-dates, 
@@ -2809,4 +2892,12 @@ body.page-template-page-contact {
   }
 }
 
+@media screen and (max-width: 782px) {
+  html.fa-events-icons-ready { margin-top: 0 !important; }
+}
+
+.tribe-events .tribe-events-c-nav__next:disabled,
+.tribe-events .tribe-events-c-nav__prev:disabled {
+  opacity: 0.3;
+}
 
