--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -23,7 +23,8 @@ $light_teal: #d9eff2;
 $purple: #5D2B79;
 
 
-$font_primary: 'Fira Sans Condensed', sans-serif;
+//$font_primary: 'Fira Sans Condensed', sans-serif;
+$font_primary: 'venn-semicondensed', 'Fira Sans Condensed', sans-serif;
 $font_secondary: venn-semiextended,sans-serif;
 $font_condensed: venn-condensed,sans-serif;
 $font_code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
