Made some changes on main events page and single page

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -707,6 +707,8 @@ a {
   width: 100%;
   float: left;
   background: $cream;
+  position: relative;
+  z-index: 105;
   .section-title {
     font-size: 3em;
     @include max( $xswidth ) {
@@ -2122,10 +2124,12 @@ body.single-tribe_events {
   }
   .gallery-slider-content {
     background-color: $cream;
+    position:relative;
+    z-index: 30;
     a.view-all-btn {
       display: inline-block;
       position: absolute;
-      top: 40px;
+      bottom: -12px;
       left: -2px;
       font-family: $font_secondary;
       font-size: 20px;
@@ -2142,7 +2146,13 @@ body.single-tribe_events {
       &:hover {
         background: tint($red,15%);
       }
+      @include tab {
+        bottom: unset;
+        top: 40px;
+        left: -2px;
+      }
     }
+    
   }
   .tribe-events-single-event-description-wrap {
     background-color: $yellow;
