--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -122,10 +122,18 @@ a {
   overflow-x: hidden;
   overflow-y: auto;
 }
+.header-notification {
+  padding: 30px 20px;
+  font-size: 20px;
+  color: #fff;
+  background: rgb(228,56,71);
+background: linear-gradient(13deg, rgba(228,56,71,1) 0%, rgba(198,177,74,1) 100%);
+}
 .site-header {
   width: 100%;
   height: 85px;
-  position: fixed;
+  // position: fixed;
+  // position: absolute;
   top: 0;
   left: 0;
   background: $cream;
@@ -227,7 +235,8 @@ a {
 .parallax-video-container {
   width: 100%;
   height: 100%;
-  position: fixed;
+  // position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   padding: 85px 20px 20px;
